register-service (#40)
* register-service

* register-service
